[package]
name = "proportional_cost_splitter"
version = "0.1.0"
edition = "2021"
authors = ["raiyan hossain <ryanhossain9797@gmail.com>"]


[lib]
name = "proportional_cost_splitter_lib"
path = "src/lib.rs"

[[bin]]
name = "proportional_cost_splitter_lib"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = [ "derive" ] }
